--- a/service_a/nginx.conf
+++ b/service_a/nginx.conf
@@ -1,7 +1,7 @@
 server {
-    listen       8099;
-    listen  [::]:8099;
-    server_name  localhost;
+    listen       80;
+    listen  [::]:80;
+    server_name  service_a;
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
