--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx
-COPY ./index.html /usr/share/nginx/html/index.html
+COPY index.html /etc/nginx/html/index.html
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./nginx_custom.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
