--- a/service_a/Dockerfile
+++ b/service_a/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx
-COPY ./service_a/index.html /usr/share/nginx/html/index.html
+COPY index.html /etc/nginx/html/index.html
+COPY index.html /usr/share/nginx/html/index.html
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./service_a/nginx_custom.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
