--- a/service_b/Dockerfile
+++ b/service_b/Dockerfile
@@ -1,3 +1,5 @@
 FROM nginx
-COPY ./service_b/index.html /usr/share/nginx/html/index.html
-COPY ./service_b/nginx_custom.conf /etc/nginx/conf.d/default.conf
+COPY index.html /etc/nginx/html/index.html
+COPY index.html /usr/share/nginx/html/index.html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
