--- a/service_b/nginx.conf
+++ b/service_b/nginx.conf
@@ -1,7 +1,7 @@
 server {
-    listen       8090;
-    listen  [::]:8090;
-    server_name  localhost;
+    listen       80;
+    listen  [::]:80;
+    server_name  service_b;
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
