--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,7 +1,17 @@
+
 server {
-    listen       80;
-    listen  [::]:80;
+	listen 80 default_server;
+	listen [::]:80 default_server;
+	server_name _;
+	return 301 https://$host$request_uri;
+}
+
+server {
+    listen       443 ssl;
     server_name  localhost;
+    ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+
     #access_log  /var# /log/nginx/host.access.log  main;
 
     location = / {
